Added new legals files
- Delete sla.html

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ or Windows</li>
       <div class="sitemap">
         <h5>Services</h5>
         <ul>
-          <li><a href="shared_hosting.html">Web Hosting</a></li>
+          <li><a href="shared_hosting.html">Shared Hosting</a></li>
           <li><a href="dedicated.html">Dedicated Server</a></li>
           <li><a href="vps.html">VPS Server</a></li>
           <li><a href="colocation.html">Co-Location</a></li>
@@ -772,11 +772,11 @@ or Windows</li>
         </ul>
         <h5>Company</h5>
         <ul>
-          <li><a href="contact.html">Corporate Profile</a></li>
-          <li><a href="tos.html">Partnership Program</a></li>
+          <li><a href="#">Corporate Profile</a></li>
+          <li><a href="#">Partnership Program</a></li>
           <li><a href="#">Careers</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="contact.html">Site Map</a></li>
+          <li><a href="sitemap.html">Site Map</a></li>
         </ul>
         <!--sitemap--> 
       </div>
@@ -794,11 +794,10 @@ or Windows</li>
         </ul>
         <h5>Legals</h5>
         <ul>
+          <li><a href="policies.html">Policies</a></li>
           <li><a href="tos.html">Terms &amp; Conditions</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="sla.html">Acceptable User Policy</a></li>
-          <li><a href="#">Refund Policy</a></li>
-          <li><a href="privacy.html">Legal Agreements</a></li>
+          <li><a href="mailpolicy.html">Spam/Mail Policy</a></li>
+          <li><a href="copyright-infringement-dmca.html">Copyright</a></li>
         </ul>
         <!--sitemap--> 
       </div>
