--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ $(document).ready(function () {
         <div class="slide slide1">
           <div class="banner">
             <h1>Hot Deals Dedicated Server</h1>
-            <h2>GB Network Solutions Has been Setting the Standard for Reliability and Performance</h2>
+            <h2>GB Network Has been Setting the Standard for Reliability and Performance</h2>
             <ul>
               <li class="bannericon1">Intel Xeon E3-1270v3<br />(4x3.5 Ghz)</li>
               <li class="bannericon2">8GB<br />RAM</li>
