remove .00 on Ringgit

--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -131,8 +131,8 @@ $(document).ready(function () {
             <ul>
               <li>RM35<span>.COM</span></li>
               <li>RM35<span>.NET</span></li>
+              <li>RM35<span>.ORG</span></li>
               <li>RM100<span>.MY</span></li>
-              <li>RM130<span>.TV</span></li>
             </ul>
             <!--blackbox--> 
           </div>
