--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image1.png" /></div>
         <h3>Silver Plan</h3>
         <p>powered by CloudLinux</p>
-        <div class="planrate"> RM<span class="doller">80</span>.00<br />
+        <div class="planrate"> RM<span class="doller">80</span><br />
           <span class="permonth">per year</span> 
           <!--planrate--> 
         </div>
@@ -260,7 +260,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image2.png" /></div>
         <h3>Bronze Plan</h3>
         <p>powered by CloudLinux</p>
-        <div class="planrate"> RM<span class="doller">180</span>.00<br />
+        <div class="planrate"> RM<span class="doller">180</span><br />
           <span class="permonth">per year</span> 
           <!--planrate--> 
         </div>
@@ -281,7 +281,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image3.png" /></div>
         <h3>Gold Plan</h3>
         <p>powered by CloudLinux</p>
-        <div class="planrate"> RM<span class="doller">230</span>.00<br />
+        <div class="planrate"> RM<span class="doller">230</span><br />
           <span class="permonth">per year</span> 
           <!--planrate--> 
         </div>
@@ -338,13 +338,13 @@ or Windows</li>
         <!--domainlt--> 
       </div>
       <div class="domainrt">
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .COM</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .NET</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .ORG</div>
-        <div class="ratebox">RM100.00<br />
+        <div class="ratebox">RM100<br />
           .MY</div>
         <!--domainrt--> 
       </div>
@@ -384,7 +384,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image1.png" /></div>
         <h3>Intel Core 2 Duo</h3>
         <p>DDoS Protection Ready</p>
-        <div class="planrate"> RM<span class="doller">249</span>.90<br />
+        <div class="planrate"> RM<span class="doller">249</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -405,7 +405,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image2.png" /></div>
         <h3>Intel Xeon E3</h3>
         <p>DDoS Protection Ready</p>
-        <div class="planrate"> RM<span class="doller">590</span>.90<br />
+        <div class="planrate"> RM<span class="doller">590</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -426,7 +426,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image3.png" /></div>
         <h3>Intel Xeon E5</h3>
         <p>DDoS Protection Ready</p>
-        <div class="planrate"> RM<span class="doller">759</span>.90<br />
+        <div class="planrate"> RM<span class="doller">759</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -451,26 +451,45 @@ or Windows</li>
           DOMAIN NAME NOW 
           <!--domaintxt--> 
         </div>
+        <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
+        <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
         <div class="dropdown1">
           <select class="field2" name="ext" id="ext">
-            <option>.com</option>
-            <option>.org</option>
-            <option>.net</option>
+                <option>.com</option>
+                <option>.net</option>
+                <option>.org</option>
+                <option>.biz</option>
+                <option>.tv</option>
+                <option>.info</option>
+                <option>.us</option>
+                <option>.cc</option>
+                <option>.name</option>
+                <option>.com.my</option>
+                <option>.net.my</option>
+                <option>.name.my</option>
+                <option>.org.my</option>
+                <option>.edu.my</option>
+                <option>.gov.my</option>
+                <option>.my</option>
+                <option>.fm</option>
+                <option>.coop</option>
+                <option>.ws</option>
           </select>
           <!--dropdown1--> 
         </div>
         <input name="button" type="submit"  class="field3" value="GO"/>
+        </form>
         <!--domainlt--> 
       </div>
       <div class="domainrt">
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .COM</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .NET</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .ORG</div>
-        <div class="ratebox">RM100.00<br />
+        <div class="ratebox">RM100<br />
           .MY</div>
         <!--domainrt--> 
       </div>
@@ -510,7 +529,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image1.png" /></div>
         <h3>VPS Plan I</h3>
         <p>Premium Hardware</p>
-        <div class="planrate"> RM<span class="doller">50</span>.00<br />
+        <div class="planrate"> RM<span class="doller">50</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -531,7 +550,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image2.png" /></div>
         <h3>VPS Plan II</h3>
         <p>Premium Hardware</p>
-        <div class="planrate"> RM<span class="doller">100</span>.00<br />
+        <div class="planrate"> RM<span class="doller">100</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -552,7 +571,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image3.png" /></div>
         <h3>VPS Plan III</h3>
         <p>Premium Hardware</p>
-        <div class="planrate"> RM<span class="doller">150</span>.00<br />
+        <div class="planrate"> RM<span class="doller">150</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -576,27 +595,46 @@ or Windows</li>
         <div class="domaintxt">FIND YOUR<br />
           DOMAIN NAME NOW 
           <!--domaintxt--> 
-        </div>
+         </div>
+        <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
+        <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
         <div class="dropdown1">
           <select class="field2" name="ext" id="ext">
-            <option>.com</option>
-            <option>.org</option>
-            <option>.net</option>
+                <option>.com</option>
+                <option>.net</option>
+                <option>.org</option>
+                <option>.biz</option>
+                <option>.tv</option>
+                <option>.info</option>
+                <option>.us</option>
+                <option>.cc</option>
+                <option>.name</option>
+                <option>.com.my</option>
+                <option>.net.my</option>
+                <option>.name.my</option>
+                <option>.org.my</option>
+                <option>.edu.my</option>
+                <option>.gov.my</option>
+                <option>.my</option>
+                <option>.fm</option>
+                <option>.coop</option>
+                <option>.ws</option>
           </select>
           <!--dropdown1--> 
         </div>
         <input name="button" type="submit"  class="field3" value="GO"/>
+        </form>
         <!--domainlt--> 
       </div>
       <div class="domainrt">
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .COM</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .NET</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .ORG</div>
-        <div class="ratebox">RM100.00<br />
+        <div class="ratebox">RM100<br />
           .MY</div>
         <!--domainrt--> 
       </div>
@@ -636,7 +674,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image1.png" /></div>
         <h3>1U Rack Space</h3>
         <p>Enterprise Infrastructure</p>
-        <div class="planrate"> RM<span class="doller">250</span>.00<br />
+        <div class="planrate"> RM<span class="doller">250</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -657,7 +695,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image2.png" /></div>
         <h3>2U Rack Space</h3>
         <p>Enterprise Infrastructure</p>
-        <div class="planrate"> RM<span class="doller">400</span>.00<br />
+        <div class="planrate"> RM<span class="doller">400</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -678,7 +716,7 @@ or Windows</li>
         <div class="image1"><img src="images/plan_image3.png" /></div>
         <h3>4U Rack Space</h3>
         <p>Enterprise Infrastructure</p>
-        <div class="planrate"> RM<span class="doller">650</span>.00<br />
+        <div class="planrate"> RM<span class="doller">650</span><br />
           <span class="permonth">per month</span> 
           <!--planrate--> 
         </div>
@@ -703,26 +741,45 @@ or Windows</li>
           DOMAIN NAME NOW 
           <!--domaintxt--> 
         </div>
+        <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
+        <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
         <div class="dropdown1">
           <select class="field2" name="ext" id="ext">
-            <option>.com</option>
-            <option>.org</option>
-            <option>.net</option>
+                <option>.com</option>
+                <option>.net</option>
+                <option>.org</option>
+                <option>.biz</option>
+                <option>.tv</option>
+                <option>.info</option>
+                <option>.us</option>
+                <option>.cc</option>
+                <option>.name</option>
+                <option>.com.my</option>
+                <option>.net.my</option>
+                <option>.name.my</option>
+                <option>.org.my</option>
+                <option>.edu.my</option>
+                <option>.gov.my</option>
+                <option>.my</option>
+                <option>.fm</option>
+                <option>.coop</option>
+                <option>.ws</option>
           </select>
           <!--dropdown1--> 
         </div>
         <input name="button" type="submit"  class="field3" value="GO"/>
+        </form>
         <!--domainlt--> 
       </div>
       <div class="domainrt">
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .COM</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .NET</div>
-        <div class="ratebox">RM35.00<br />
+        <div class="ratebox">RM35<br />
           .ORG</div>
-        <div class="ratebox">RM100.00<br />
+        <div class="ratebox">RM100<br />
           .MY</div>
         <!--domainrt--> 
       </div>
@@ -771,30 +828,29 @@ or Windows</li>
           <li><a href="vps.html">VPS Server</a></li>
           <li><a href="colocation.html">Co-Location</a></li>
           <li><a href="domain_ssl.html">Domain &amp; SSL</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Special Offers</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="specials.html">Special Offers</a></li>
         </ul>
         <h5>Company</h5>
         <ul>
-          <li><a href="#">Corporate Profile</a></li>
-          <li><a href="#">Partnership Program</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="about.html">Corporate Profile</a></li>
+          <li><a href="partnership.html">Partnership Program</a></li>
+          <li><a href="careers.html">Careers</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="sitemap.html">Site Map</a></li>
         </ul>
         <!--sitemap--> 
       </div>
       <div class="sitemap">
         <h5>Client Center</h5>
         <ul>
-          <li><a href="#">Client Area</a></li>
-          <li><a href="#">Submit Ticket</a></li>
-          <li><a href="#">Manage Services</a></li>
-          <li><a href="#">Manage Domains</a></li>
-          <li><a href="#">Invoice History</a></li>
-          <li><a href="#">Whois Search</a></li>
-          <li><a href="#">Knowledgebase</a></li>
-          <li><a href="#">Affiliate Program</a></li>       
+          <li><a href="https://secure.gempakbox.net/clientarea.php">Client Area</a></li>
+          <li><a href="https://secure.gempakbox.net/submitticket.php">Submit Ticket</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=products">Manage Services</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=domains">Manage Domains</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=invoices">Invoice History</a></li>
+          <li><a href="https://secure.gempakbox.net/domainchecker.php">Whois Search</a></li>
+          <li><a href="https://secure.gempakbox.net/knowledgebase.php">Knowledgebase</a></li>
+          <li><a href="https://secure.gempakbox.net/affiliates.php">Affiliate Program</a></li>       
         </ul>
         <h5>Legals</h5>
         <ul>
@@ -802,6 +858,7 @@ or Windows</li>
           <li><a href="tos.html">Terms &amp; Conditions</a></li>
           <li><a href="mailpolicy.html">Spam/Mail Policy</a></li>
           <li><a href="copyright-infringement-dmca.html">Copyright</a></li>
+          <li><a href="sitemap.html">Site Map</a></li>
         </ul>
         <!--sitemap--> 
       </div>
@@ -821,8 +878,8 @@ or Windows</li>
         </div>
         <div class="get_social"></div>
         <div class="social_box">
-          <div class="social_icons"><a class="fb" href="#"></a></div>
-          <div class="social_icons"><a class="twitter" href="#"></a></div>
+          <div class="social_icons"><a class="fb" href="https://www.facebook.com/GBNetworkSolutions"></a></div>
+          <div class="social_icons"><a class="twitter" href="https://twitter.com/GempakBoxNet"></a></div>
           <div class="social_icons"><a class="rss" href="#"></a></div>
           <div class="social_icons"><a class="linkedin" href="#"></a></div>
           <!--social_box--> 
