Added Reference Link

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@ $(document).ready(function () {
         <li><a href="vps.html">VPS Server</a></li>
         <li><a href="colocation.html">Colocation</a></li>
         <li><a href="domain_ssl.html">Domain & SSL</a></li>
-        <li><a href="#">Support</a></li>
+        <li><a href="products.html">Products</a></li>
         <li><a class="offerbtn" href="#">Special Offers</a></li>
       </ul>
       <!--nav--> 
@@ -81,7 +81,7 @@ $(document).ready(function () {
 </div>
 <div class="subanner vps_banner">
   <h1>Contact Us</h1>
-  <h2>GempakBox Has been Setting the Standard for Reliability and Performance</h2>
+  <h2>GB Network Has been Setting the Standard for Reliability and Performance</h2>
   <!--subanner--> 
 </div>
 <div class="wrapper">
@@ -89,22 +89,23 @@ $(document).ready(function () {
     <div class="contact_box">
       <ul class="list1">
         <li>
-          <div class="txtinner"> <span class="style1">Name & Registered Office</span>VSUITE 8, ISLINGTON HOUSE,
-            5454 UPPER STREET,<br />
-            LONDON<br />
-            ENGLAND<br />
-            N3 6XQ<br />
-            Company No.: <span class="red">0801157895</span> 
+          <div class="txtinner"> <span class="style1">Name & Registered Office</span>GB Network Solutions<br />
+            Jalan Masjid Raja<br />
+            21100 Kuala Terengganu<br />
+            Terengganu, Malaysia.<br />
+            D-U-N-S Number: <span class="red">865806483</span>
+            Registration No.: <span class="red">TR0102152-X</span> 
+
             <!--txtinner--> 
           </div>
         </li>
         <li>
-          <div class="txtinner txtinner2"> <span class="style1">Email Address</span> Sales Department:<br />
-            <a href="mailto:sales@gbnetwork.com">sales@gbnetwork.com</a><br />
+          <div class="txtinner txtinner2"> <span class="style1">Email Address</span> Support Department:<br />
+            <a href="mailto:support@gbnetwork.my">support@gbnetwork.my</a><br />
+            Sales Department:<br />
+            <a href="mailto:sales@gbnetwork.my">sales@gbnetwork.my</a><br />
             Billing Department:<br />
-            <a href="mailto:billing@gbnetwork.com">billing@gbnetwork.com</a><br />
-            Feedback:<br />
-            <a href="mailto:feedback@gbnetwork.com">feedback@gbnetwork.com</a> 
+            <a href="mailto:billing@gbnetwork.my">billing@gbnetwork.my</a> 
             <!--txtinner--> 
           </div>
         </li>
@@ -125,7 +126,7 @@ $(document).ready(function () {
     <div class="contact_box">
       <h4>Contact Form</h4>
       <div class="box_inner">
-        <p>Thank you for showing interest in Gb Network web hosting products and services.<br />
+        <p>Thank you for showing interest in GB Network Solutions Web Hosting Products and Services.<br />
           We would love to hear from you and answer your queries. Our friendly and polite staff is available 24x7x365 days and standby to assist you.</p>
         <h5><span class="red">*</span>= Required Fields</h5>
         <div class="formlt">
