--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -71,8 +71,8 @@ $(document).ready(function () {
         <li><a href="vps.html">VPS Server</a></li>
         <li><a href="colocation.html">Colocation</a></li>
         <li class="current"><a href="domain_ssl.html">Domain & SSL</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a class="offerbtn" href="#">Special Offers</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a class="offerbtn" href="specials.html">Special Offers</a></li>
       </ul>
       <!--nav--> 
     </div>
