--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ $(document).ready(function () {
         <li class="icon1" style="position:relative; z-index:1;"><a id="hide2" href="#">Client Login</a>
           <div class="dropdown_link2">
             <ul class="list2">
-              <li><a href="create_account.html">Create Account</a></li>
-              <li><a href="login.html">Login</a></li>
+              <li><a href="https://secure.gempakbox.net/register.php">Create Account</a></li>
+              <li><a href="https://secure.gempakbox.net/clientarea.php">Login</a></li>
             </ul>
           </div>
         </li>
@@ -103,7 +103,7 @@ $(document).ready(function () {
         <li><a href="vps.html">VPS Server</a></li>
         <li><a href="colocation.html">Colocation</a></li>
         <li><a href="domain_ssl.html">Domain & SSL</a></li>
-        <li><a href="#">Products</a></li>
+        <li><a href="products.html">Products</a></li>
         <li><a class="offerbtn" href="#">Special Offers</a></li>
       </ul>
       <!--nav--> 
