--- a/shared_hosting.html
+++ b/shared_hosting.html
@@ -453,63 +453,63 @@ $(document).ready(function () {
       <div class="sitemap">
         <h5>Services</h5>
         <ul>
-          <li><a href="shared_hosting.html">Web Hosting</a></li>
+          <li><a href="shared_hosting.html">Shared Hosting</a></li>
           <li><a href="dedicated.html">Dedicated Server</a></li>
           <li><a href="vps.html">VPS Server</a></li>
           <li><a href="colocation.html">Co-Location</a></li>
           <li><a href="domain_ssl.html">Domain &amp; SSL</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Special Offers</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="specials.html">Special Offers</a></li>
         </ul>
         <h5>Company</h5>
         <ul>
-          <li><a href="contact.html">Corporate Profile</a></li>
-          <li><a href="tos.html">Partnership Program</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="about.html">Corporate Profile</a></li>
+          <li><a href="partnership.html">Partnership Program</a></li>
+          <li><a href="careers.html">Careers</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="contact.html">Site Map</a></li>
         </ul>
         <!--sitemap--> 
       </div>
       <div class="sitemap">
         <h5>Client Center</h5>
         <ul>
-          <li><a href="#">Client Area</a></li>
-          <li><a href="#">Submit Ticket</a></li>
-          <li><a href="#">Manage Services</a></li>
-          <li><a href="#">Manage Domains</a></li>
-          <li><a href="#">Invoice History</a></li>
-          <li><a href="#">Whois Search</a></li>
-          <li><a href="#">Knowledgebase</a></li>
-          <li><a href="#">Affiliate Program</a></li>       
+          <li><a href="https://secure.gempakbox.net/clientarea.php">Client Area</a></li>
+          <li><a href="https://secure.gempakbox.net/submitticket.php">Submit Ticket</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=products">Manage Services</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=domains">Manage Domains</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=invoices">Invoice History</a></li>
+          <li><a href="https://secure.gempakbox.net/domainchecker.php">Whois Search</a></li>
+          <li><a href="https://secure.gempakbox.net/knowledgebase.php">Knowledgebase</a></li>
+          <li><a href="https://secure.gempakbox.net/affiliates.php">Affiliate Program</a></li>       
         </ul>
         <h5>Legals</h5>
         <ul>
+          <li><a href="policies.html">Policies</a></li>
           <li><a href="tos.html">Terms &amp; Conditions</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="sla.html">Acceptable User Policy</a></li>
-          <li><a href="#">Refund Policy</a></li>
-          <li><a href="privacy.html">Legal Agreements</a></li>
+          <li><a href="mailpolicy.html">Spam/Mail Policy</a></li>
+          <li><a href="copyright-infringement-dmca.html">Copyright</a></li>
+          <li><a href="sitemap.html">Site Map</a></li>
         </ul>
         <!--sitemap--> 
       </div>
+     
       <div class="sitemap">
-        <h5>We accept</h5>
+        <h5>We Accept</h5>
         <div class="image1"><img src="images/credit_icon.jpg" alt="" /></div>
         <!--sitemap--> 
       </div>
       <div class="footer_rt">
         <div class="logo2"><a href="#"></a></div>
         <div class="copyright">
-          <p> ©2007-2011 GB Network Solutions </p>
+          <p> ©2007-2014 GB Network Solutions </p>
           <p>(TR0102152-X).All Trademarks Are The
             Property of Their Respective Owner.</p>
           <!--copyright--> 
         </div>
         <div class="get_social"></div>
         <div class="social_box">
-          <div class="social_icons"><a class="fb" href="#"></a></div>
-          <div class="social_icons"><a class="twitter" href="#"></a></div>
+          <div class="social_icons"><a class="fb" href="https://www.facebook.com/GBNetworkSolutions"></a></div>
+          <div class="social_icons"><a class="twitter" href="https://twitter.com/GempakBoxNet"></a></div>
           <div class="social_icons"><a class="rss" href="#"></a></div>
           <div class="social_icons"><a class="linkedin" href="#"></a></div>
           <!--social_box--> 
