--- a/tos.html
+++ b/tos.html
@@ -31,8 +31,8 @@ $(document).ready(function () {
         <li class="icon1" style="position:relative; z-index:1;"><a id="hide2" href="#">Client Login</a>
           <div class="dropdown_link2">
             <ul class="list2">
-              <li><a href="create_account.html">Create Account</a></li>
-              <li><a href="login.html">Login</a></li>
+              <li><a href="https://secure.gempakbox.net/register.php">Create Account</a></li>
+              <li><a href="https://secure.gempakbox.net/clientarea.php">Login</a></li>
             </ul>
           </div>
         </li>
@@ -69,8 +69,8 @@ $(document).ready(function () {
         <li><a href="vps.html">VPS Server</a></li>
         <li><a href="colocation.html">Colocation</a></li>
         <li><a href="domain_ssl.html">Domain & SSL</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a class="offerbtn" href="#">Special Offers</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a class="offerbtn" href="specials.html">Special Offers</a></li>
       </ul>
       <!--nav--> 
     </div>
@@ -87,11 +87,16 @@ $(document).ready(function () {
 <div class="wrapper">
   <div class="contact_formbox">
     <div class="textbox">
-      <h3>GB NETWORK Terms of Service.</h3>
-      <p><strong>Lorem Ipsum</strong> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-      <p><strong>It is a long established </strong>fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-      <p><strong>Contrary to popular</strong> belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.<br />
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+      <h3>TERM OF SERVICE</h3>
+      <p>The  terms of service detailed within this document contain the conditions for services provided  by GB Network Solutions. This document constitutes a binding agreement between GB Network Solutions and the user of the  services provided. These terms must be accepted by the user prior to the provision of the services ordered  through submission of the registration form. By ordering the services, you agree to be bound by the terms and  conditions stipulated within without modification. </p>
+      <h3>PRIVACY POLICY</h3>
+      <p>The creation of the GB Network Solutions privacy statement demonstrates our firm  commitment to protecting the privacy of those with whom we interact.  This statement sets forth our information gathering and dissemination  practices for the GB Network Solutions website and newsletter. GB Network Solutions makes every effort to follow industry standard security  measures to prevent the loss, misuse and alteration of the information  under our control. All customer information is stored in our company  databases and is accessible only to internal employees. </p>
+      <h3>DEDICATED SERVER POLICY</h3>
+      <p>This policy only pertains to you if you own a dedicated server. This policy is the Acceptable Use Policy that you agree to when purchasing a dedicated server. It contains all information regarding what content you can host, legal aspects, fees and so on. To ensure your server is not disconnected for violating one of the points in this policy we strongly suggest you become familiar with all aspects of this policy to have a full understanding and knowledge while running your server. </p>
+      <h3>REFUND POLICY</h3>
+      <p>At GB Network Solutions we will always go above and beyond to ensure 100% customer satisfaction which is why there is no surprise that we offer a 30 day money back Guarantee. If for any reason you are not satisfied with the level of service provided by GB Network Solutions you are more than welcome to submit a refund request using this form. Please submit a ticket before you do this as we always want to keep your business and will do whatever possible to ensure that. This policy covers everything we will refund you for and situations where we will not. </p>
+      <h3>ACCEPTABLE USAGE POLICY</h3>
+      <p>By signing up for any GB Network Solutions account you agree to this policy which states that you will not abuse resources or effect the performance to other customers on the server. It also regards to  what you can and what you should not do or host on the server. It is required that you read this and all policies before you sign up or your account may be terminated or suspended  if you do not follow our AUP. </p>
       <!--textbox--> 
     </div>
     <!--contact_formbox--> 
@@ -110,60 +115,68 @@ $(document).ready(function () {
   <div class="wrapper">
     <div class="footer_box">
       <div class="sitemap">
-        <h5>Web Hosting</h5>
+        <h5>Services</h5>
         <ul>
           <li><a href="shared_hosting.html">Shared Hosting</a></li>
           <li><a href="dedicated.html">Dedicated Server</a></li>
           <li><a href="vps.html">VPS Server</a></li>
-          <li><a href="#">Hosting Management</a></li>
+          <li><a href="colocation.html">Co-Location</a></li>
+          <li><a href="domain_ssl.html">Domain &amp; SSL</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="specials.html">Special Offers</a></li>
         </ul>
-        <h5>About Us</h5>
+        <h5>Company</h5>
         <ul>
+          <li><a href="about.html">Corporate Profile</a></li>
+          <li><a href="partnership.html">Partnership Program</a></li>
+          <li><a href="careers.html">Careers</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="tos.html">Terms &amp; Conditions</a></li>
-          <li><a href="#">Acceptable Use Policy</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="sitemap.html">Sitemap</a></li>
         </ul>
         <!--sitemap--> 
       </div>
       <div class="sitemap">
-        <h5>Domains</h5>
+        <h5>Client Center</h5>
         <ul>
-          <li><a href="#">Domain Registration</a></li>
-          <li><a href="#">Managed Servers</a></li>
-          <li><a href="#">Fibre Leased Line</a></li>
-          <li><a href="#">Affiliate program</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php">Client Area</a></li>
+          <li><a href="https://secure.gempakbox.net/submitticket.php">Submit Ticket</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=products">Manage Services</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=domains">Manage Domains</a></li>
+          <li><a href="https://secure.gempakbox.net/clientarea.php?action=invoices">Invoice History</a></li>
+          <li><a href="https://secure.gempakbox.net/domainchecker.php">Whois Search</a></li>
+          <li><a href="https://secure.gempakbox.net/knowledgebase.php">Knowledgebase</a></li>
+          <li><a href="https://secure.gempakbox.net/affiliates.php">Affiliate Program</a></li>       
         </ul>
         <h5>Legals</h5>
         <ul>
+          <li><a href="policies.html">Policies</a></li>
           <li><a href="tos.html">Terms &amp; Conditions</a></li>
-          <li><a href="sla.html">Service Level Agreement</a></li>
-          <li><a href="#">Acceptable Use Policy</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="mailpolicy.html">Spam/Mail Policy</a></li>
+          <li><a href="copyright-infringement-dmca.html">Copyright</a></li>
+          <li><a href="sitemap.html">Site Map</a></li>
         </ul>
         <!--sitemap--> 
       </div>
+     
       <div class="sitemap">
-        <h5>We accept</h5>
+        <h5>We Accept</h5>
         <div class="image1"><img src="images/credit_icon.jpg" alt="" /></div>
         <!--sitemap--> 
       </div>
       <div class="footer_rt">
         <div class="logo2"><a href="#"></a></div>
         <div class="copyright">
-          <p> ©2007-2011 GB Network Solutions </p>
+          <p> ©2007-2014 GB Network Solutions </p>
           <p>(TR0102152-X).All Trademarks Are The
             Property of Their Respective Owner.</p>
           <!--copyright--> 
         </div>
         <div class="get_social"></div>
         <div class="social_box">
-          <div class="social_icons"><a class="fb" href="#"></a></div>
-          <div class="social_icons"><a class="twitter" href="#"></a></div>
+          <div class="social_icons"><a class="fb" href="https://www.facebook.com/GBNetworkSolutions"></a></div>
+          <div class="social_icons"><a class="twitter" href="https://twitter.com/GempakBoxNet"></a></div>
           <div class="social_icons"><a class="rss" href="#"></a></div>
           <div class="social_icons"><a class="linkedin" href="#"></a></div>
-          <!--social_box--> 
+          <!--social_box-->
         </div>
         <!--footer_rt--> 
       </div>
