--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -101,7 +101,7 @@ $(document).ready(function () {
               DOMAIN NAME NOW</h4>
             <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
               <input type="hidden" name="direct" value="true" />
-              <input type="text" name="domain" size="20"class="field1" />
+              <input type="text" name="domain" size="20" class="field1" placeholder="Enter your desired domain name here" />
               <select name="ext" class="drop_down">
                 <option>.com</option>
                 <option>.net</option>
