change font-family to Titillium Web

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ or Windows</li>
         <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
         <div class="dropdown1">
-          <select class="field2" name="ext" id="ext">
+          <select name="ext" class="field2" id="ext">
                 <option>.com</option>
                 <option>.net</option>
                 <option>.org</option>
